kubernetes/apps/qbittorrent/exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-exporter
  namespace: qbittorrent
spec:
  type: ClusterIP
  selector:
    app: qbittorrent-exporter
  ports:
    - port: 19091
      targetPort: 19091
      name: metrics
