kubernetes/apps/qbittorrent/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qui
  namespace: qbittorrent
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab
      namespace: kgateway-system
      sectionName: https
  hostnames:
    - qbit.pavlenko.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: qui
          port: 7476
          weight: 1
